                                Release Notes

 Development version:
 --------------------

Emulation:
- Machine:
  - Support for MegaST & MegaSTE machines added
- HD:
  - Fix: Disable GEMDOS opcodes after GEMDOS drive is disabled
  - Fix: GEMDOS HD can now be initialized multiple times,
    e.g. when running EmuTOS RAM image from a normal TOS
  - Fix: WORD access to IDE data register at 0xf00002
- Video:
  - Fix: reading video counter $FF8205/07/09 after modifying it
    while display is ON
  - Fix: location of the video counter's restart when screen runs at 60 Hz
  - TT: sync ST & TT color registers immediately on write, handle
    palette bank setting correctly, fix duochrome colors
  - Falcon: handle byte access special case for ST color registers
  - Falcon: border color support also in HiColor
- Sound:
  - DMA sound should be played even when start address = end address
- CPU:
  - More accurate 68060 mode (instructions from previous CPU versions
    removed in 68060 aren't accepted/emulated anymore)
  - Misc bus error / IO mem register handling fixes for TT & Falcon
    (e.g. add TT DIP switch register handler)
- Fixes to DSP addressing

Emulator:
- SDL GUI:
  - MegaST/MegaSTe support
  - Shortcuts can be configured in the keyboard dialog
  - User can provide volume label when creating a floppy image
  - Show dialog on HD image size issues
- Better SDL2 support:
  - SDL2 is now enabled by default
  - Resizable windows, including ST/STE screen scaling
  - "--desktop" option is used also for ST/STe instead of "--desktop-st"
- Configuration:
  - Hatari defaults to ST both with oldUAE & WinUAE CPU core
  - Preferred private configuration directory is now ~/.config/hatari
    on Linux/Unix (the legacy location ~/.hatari is still used if
    the other one does not exist yet)
  - Windows config location is now: AppData\Local\Hatari
  - Support SDL key names in keymap files in addition to key codes
  - Comment characters (#, ;) can also be mapped in keymap file